# src/modules/auth/auth.routes.ts
@@ -1,5 +1,6 @@
 import { asyncHandler } from '@/utils/async-handler'
 import { Router } from 'express'
+import loginController from './controllers/login.controller'
 import registerController from './controllers/register.controller'
 
 export default (app: Router): Router => {
@@ -8,6 +9,9 @@ export default (app: Router): Router => {
 
 	/* Register */
 	router.post('/register', asyncHandler(registerController))
+
+	/* Login */
+	router.post('/login', asyncHandler(loginController))
 
 	return router
 }
